# jump_to

flask/: config.py  pybo.db  test_db_data.py
flask/migrations/: README
flask/migrations/versions/: 0.0.0_init.py  0.0.1_user_add.py
flask/pybo/: __init__.py  filter.py  forms.py  models.py
flask/pybo/templates/: base.html
flask/pybo/templates/auth/: login.html  signup.html
flask/pybo/templates/question/: question_detail.html  question_form.html  question_list.html
flask/pybo/views/: answer_views.py  auth_views.py  main_views.py  question_views.py
jt_django/: README.md  pyproject.toml
jt_django/config/: settings.py  urls.py
jt_django/pybo/: urls.py  views.py
