[tool.poetry]
name = "jt-django"
version = "0.1.0"
description = ""
authors = ["siha <siha@ssrinc.co.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
